correct spilling

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,23 @@
 .column-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* height: 100vh;  */
-    margin-left: 10px;
-    
-  }
-  .row-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-   margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh;  */
+  margin-left: 10px;
+}
+.row-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
   /* Adjust this value according to your needs */
-  }
-  .paddelement{
-   margin: 4px;
-  }
-  .numbers{
-    margin-top: -22px;
-    margin-bottom: 10px;
-  }
-  
+}
+.paddingElement {
+  margin: 4px;
+}
+.numbers {
+  margin-top: -22px;
+  margin-bottom: 10px;
+}
